[package]
name = "webrtc-client"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
dioxus = "0.4"
dioxus-desktop = "0.4"
webrtc = "0.11.0"
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
anyhow = "1.0"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"